--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,14 +1,106 @@
 <div class="card flex justify-content-center gap-2">
-  <p-toast
-    position="top-center"
-    key="tc"
-  ></p-toast
-  ><button
-    type="button"
-    pButton
-    pRipple
-    (click)="showTopCenter()"
-    label="Top Center"
-    class="p-button-warning"
-  ></button>
+  <p-toast position="top-center" key="tc"></p-toast>
+</div>
+<div
+  class="card flex justify-content-center align-items-center"
+  style="height: 100vh"
+>
+  <div
+    class="card"
+    style="
+      background-color: rgba(40, 40, 40, 0.3);
+      box-shadow: 0 3px 30px black;
+      border-radius: 3%;
+    "
+  >
+    <div class="card flex flex-wrap gap-3 justify-content-center">
+      <button
+        pButton
+        pRipple
+        label="Registration"
+        class="p-button-raised p-button-text p-button-warning"
+        style="
+          margin: 15px;
+          padding: 10px;
+          margin-bottom: 8px;
+          font-size: 15px;
+          color: beige;
+          background-color: rgb(255, 240, 0, 0.15);
+        "
+        (click)="registration()"
+      ></button>
+    </div>
+    <div
+      class="card flex justify-content-center"
+      style="
+        margin: 27px;
+        background-color: rgba(0, 0, 0, 0);
+        box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 3%;
+      "
+    >
+      <span class="p-float-label">
+        <input
+          pInputText
+          style="
+            padding: 5px;
+            font-size: 20px;
+            color: white;
+            background-color: transparent;
+            border-color: transparent;
+          "
+          id="username"
+          type="text"
+          required
+          [(ngModel)]="this.authReq.username"
+        />
+        <label for="username">Username</label>
+      </span>
+    </div>
+    <div
+      class="card flex justify-content-center"
+      style="
+        margin: 27px;
+        background-color: rgba(0, 0, 0, 0);
+        box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.5);
+        border-radius: 3%;
+      "
+    >
+      <span class="p-float-label">
+        <input
+          pInputText
+          style="
+            padding: 5px;
+            font-size: 20px;
+            color: white;
+            background-color: transparent;
+            border-color: transparent;
+          "
+          id="password"
+          type="password"
+          required
+          [(ngModel)]="this.authReq.password"
+        />
+        <label for="password">Password</label>
+      </span>
+    </div>
+    <div class="card flex flex-wrap gap-3 justify-content-center">
+      <button
+        pButton
+        pRipple
+        label="Login"
+        class="p-button-raised p-button-text p-button-success"
+        style="
+          margin: 20px;
+          padding-left: 40px;
+          padding-right: 40px;
+          margin-top: 4px;
+          font-size: 20px;
+          color: beige;
+          background-color: rgba(102, 255, 0, 0.15);
+        "
+        (click)="login()"
+      ></button>
+    </div>
+  </div>
 </div>
