--- a/frontend/src/app/components/start/start.component.css
+++ b/frontend/src/app/components/start/start.component.css
@@ -1,1 +1,18 @@
+.start-button {
+  margin: 20px;
+  font-size: 50px;
+  font-weight: 600;
+  border-style: none;
+  background-color: rgb(0, 0, 0, 0);
+  color: white;
+  user-select: none;
+}
 
+.start-button:hover {
+  text-shadow: 
+    3px 3px 10px rgb(255, 25, 250), 
+    3px 3px 20px rgb(255, 25, 200),
+    3px 3px 40px rgb(255, 25, 150), 
+    3px 3px 80px rgb(255, 25, 100),
+    3px 3px 120px rgb(255, 25, 0);
+}
